Bug 516107 - Pressing the Down arrow key in the chat text bar crashes NeoChat in qt_assert_x()
Summary: Pressing the Down arrow key in the chat text bar crashes NeoChat in qt_assert...
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Flatpak Linux
: NOR crash
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-02-16 17:22 UTC by Nate Graham
Modified: 2026-02-16 19:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 26.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2026-02-16 17:22:05 UTC
Current git master via the KDE nightly Flatpak repo.

STEPS TO REPRODUCE
1. Focus the chat text field
2. Press the Down arrow key

OBSERVED RESULT
NeoChat crashes immediately 100% of the time.

My backtrace is terrible, sorry. It came from flatpak-coredumpctl and I don't know why there aren't full debug symbols. Maybe the KDE nightly flatpak repo doesn't publish full debug symbols for some reason? Hopefully it's 100% reproducible for others too.

#0  0x00007f068b89d51c in __pthread_kill_implementation () at /usr/lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f068b8433be in raise () at /usr/lib/x86_64-linux-gnu/libc.so.6
#2  0x00007f068b82a8ed in abort () at /usr/lib/x86_64-linux-gnu/libc.so.6
#3  0x00007f068becc2b4 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#4  0x00007f068bf21efe in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#5  0x00007f068becd8c6 in QMessageLogger::fatal(char const*, ...) const ()
    at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#6  0x00007f068becc375 in qt_assert_x(char const*, char const*, char const*, int) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#7  0x00005597fedc6539 in ??? ()
#8  0x00005597fedc67e7 in ??? ()
#9  0x00007f068c01959a in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#10 0x00005597ff283165 in ??? ()
#11 0x00005597ff283f35 in ??? ()
#12 0x00005597ff2840e2 in ??? ()
#13 0x00007f068f00b412 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#14 0x00007f068ee9568e in QV4::QObjectMethod::callPrecise(QQmlObjectOrGadget const&, QQmlPropertyData const&, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#15 0x00007f068ee97df1 in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#16 0x00007f068ef083ba in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#17 0x00007f068ef0d13f in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#18 0x00007f068ee2fa30 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#19 0x00007f068ee2fe77 in QV4::Function::call(QObject*, void**, QMetaType const*, int, QV4::ExecutionContext*) () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#20 0x00007f068efc13b0 in QQmlJavaScriptExpression::evaluate(void**, QMetaType const*, int) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#21 0x00007f068ef55bfa in QQmlBoundSignalExpression::evaluate(void**) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#22 0x00007f068ef56810 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#23 0x00007f068eff2351 in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Qml.so.6
#24 0x00007f068c019230 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#25 0x00007f068f61e70a in QQuickKeysAttached::pressed(QQuickKeyEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#26 0x00007f068f62735f in QQuickKeysAttached::keyPressed(QKeyEvent*, bool) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#27 0x00007f068f6265f3 in QQuickItemPrivate::filterKeyEvent(QKeyEvent*, bool) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#28 0x00007f068f6400d2 in QQuickItemPrivate::deliverKeyEvent(QKeyEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#29 0x00007f068f640568 in QQuickItem::event(QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#30 0x00007f068f6b3aa8 in QQuickTextEdit::event(QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#31 0x00007f068dba6fdf in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Widgets.so.6
#32 0x00007f068bfadde8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#33 0x00007f068f835fb3 in QQuickDeliveryAgentPrivate::deliverKeyEvent(QKeyEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Quick.so.6
#34 0x00007f068d0742f5 in QWindow::event(QEvent*) () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
#35 0x00007f068dba6fdf in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Widgets.so.6
#36 0x00007f068bfadde8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#37 0x00007f068d009e64 in QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*) () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
#38 0x00007f068d078a4c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
#39 0x00007f068d617934 in ??? () at /usr/lib/x86_64-linux-gnu/libQt6Gui.so.6
--Type <RET> for more, q to quit, c to continue without paging--c
#40 0x00007f068bd0e18e in g_main_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f068bd0f1bf in g_main_context_iterate_unlocked.isra ()
    at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f068bd0f323 in g_main_context_iteration ()
    at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#43 0x00007f068c2e692d in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#44 0x00007f068bfbade3 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
    at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#45 0x00007f068bfb66a9 in QCoreApplication::exec() () at /usr/lib/x86_64-linux-gnu/libQt6Core.so.6
#46 0x00005597fedf1117 in ??? ()
#47 0x00007f068b82c975 in __libc_start_call_main () at /usr/lib/x86_64-linux-gnu/libc.so.6
#48 0x00007f068b82ca28 in __libc_start_main () at /usr/lib/x86_64-linux-gnu/libc.so.6
#49 0x00005597fef42da5 in ??? ()
Comment 1 Bug Janitor Service 2026-02-16 18:24:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/2674
Comment 2 Joshua Goins 2026-02-16 19:09:28 UTC
Git commit 942221b59fedcba33e9fdf06f52df49e0b4befe5 by Joshua Goins.
Committed on 16/02/2026 at 18:46.
Pushed by nvrwhere into branch 'master'.

Don't attempt to navigate to a component that doesn't exist

Check for the size of our component list before trying to access it.
FIXED-IN: 26.04

M  +3    -0    src/messagecontent/models/chatbarmessagecontentmodel.cpp

https://invent.kde.org/network/neochat/-/commit/942221b59fedcba33e9fdf06f52df49e0b4befe5