Don't attempt to navigate to a component that doesn't exist

Check for the size of our component list before trying to access it.

BUG: 516107
FIXED-IN: 26.04